update: login logic and check status logic
